[gd_scene load_steps=3 format=3 uid="uid://bq0h60wfvn4qx"]

[ext_resource type="Script" uid="uid://c08c3g1akko6l" path="res://Scripts/Game.gd" id="1_jp55m"]
[ext_resource type="PackedScene" uid="uid://ccrj4phptewfq" path="res://Prefabs/UI/CurrentCharacterUI.tscn" id="8_iwhdb"]

[node name="Game" type="Node2D" groups=["Game"]]
position = Vector2(192, 384)
script = ExtResource("1_jp55m")

[node name="Tiles" type="Node2D" parent="."]

[node name="PawnList" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" parent="CanvasLayer" instance=ExtResource("8_iwhdb")]
anchors_preset = 1
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -400.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 150.0
grow_horizontal = 0
grow_vertical = 1

[node name="Label" type="Label" parent="CanvasLayer"]
custom_minimum_size = Vector2(200, 50)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
text = "TURN 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeadEndPanel" type="Panel" parent="CanvasLayer"]
visible = false
custom_minimum_size = Vector2(1152, 50)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="CanvasLayer/DeadEndPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "DEAD END
\"R\" to RESTART"
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="Effects" type="Node2D" parent="." groups=["Effects"]]

[node name="Objectives" type="Node2D" parent="."]

[node name="ScenarioListeners" type="Node2D" parent="."]

[connection signal="child_order_changed" from="PawnList" to="." method="_on_pawn_list_child_order_changed"]
